--- a/tareas.json
+++ b/tareas.json
@@ -2,20 +2,29 @@
     "id": 0,
     "nombre": "nombre",
     "descripcion": "descripcion",
-    "fecha_inicio": "2024-07-15 16:26:37.573292",
-    "fecha_vencimiento": "2024-07-15 16:26:37.573292",
+    "fecha_inicio": "2024-07-15 17:07:58.544095",
+    "fecha_vencimiento": "2024-07-15 17:07:58.544095",
     "estado_actual": "estado_actual",
     "empresa": "empresa",
     "gerente": "gerente",
     "equipo": "equipo",
     "tareas": [
         {
-            "id": "234",
-            "nombre": "FDSF",
-            "descripcion": "FDSFS",
-            "fecha_inicio": "2005-12-02 00:00:00",
-            "fecha_vencimiento": "2006-12-02 00:00:00",
-            "estado_actual": "SDSD",
+            "id": "777",
+            "nombre": "dsf",
+            "descripcion": "dsfsdf",
+            "fecha_inicio": "2008-02-03 00:00:00",
+            "fecha_vencimiento": "2007-03-04 00:00:00",
+            "estado_actual": "dsdsd",
+            "subtareas": []
+        },
+        {
+            "id": "555",
+            "nombre": "sdds",
+            "descripcion": "dsdsa",
+            "fecha_inicio": "2006-02-02 00:00:00",
+            "fecha_vencimiento": "2008-03-03 00:00:00",
+            "estado_actual": "sdsds",
             "subtareas": []
         }
     ]
