--- a/tareas.json
+++ b/tareas.json
@@ -2,8 +2,8 @@
     "id": 0,
     "nombre": "nombre",
     "descripcion": "descripcion",
-    "fecha_inicio": "2024-07-15 17:51:03.899663",
-    "fecha_vencimiento": "2024-07-15 17:51:03.899663",
+    "fecha_inicio": "2024-07-15 20:21:51.290084",
+    "fecha_vencimiento": "2024-07-15 20:21:51.290084",
     "estado_actual": "estado_actual",
     "empresa": "empresa",
     "gerente": "gerente",
@@ -11,11 +11,11 @@
     "tareas": [
         {
             "id": "123",
-            "nombre": "sdsds",
-            "descripcion": "adsdsdsa",
+            "nombre": "dsfdsf",
+            "descripcion": "fdfsdfsdf",
             "fecha_inicio": "2005-12-02 00:00:00",
             "fecha_vencimiento": "2006-12-03 00:00:00",
-            "estado_actual": "sdsd",
+            "estado_actual": "ffsdfsdfsd",
             "subtareas": []
         }
     ]
